--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html >
+<html lang="en">
   <head>
+    <meta charset="utf-8">
     <title>Creating and Inserting DOM Elements</title>
   </head>
   <script type="application/javascript">
